test_run.txt

--- Running crash.kix ---

warning: field `instantiations` is never read
  --> crates\kicomp\src\monomorphize.rs:25:5
   |
21 | struct MonoContext<'a> {
   |        ----------- field in this struct
...
25 |     instantiations: H...
   |     ^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default


D:\Progetti\Nevhar\Kinetix\tests\crash.kix:
error: Type mismatch: str vs int
  --> D:\Progetti\Nevhar\Kinetix\tests\crash.kix:5
   |
 5 | let z = x + y
   | ^^^^^^^^^^^^^
  1 error(s) in Type Checker

error[E0000]: aborting due to previous error(s)
  Kinetix v0.0.6 (Dev)
  For more information, open an issue: https://github.com/MisterY3515/Kinetix/issues


--- Running linear_fail_fn.kix ---

warning: field `instantiations` is never read
  --> crates\kicomp\src\monomorphize.rs:25:5
   |
21 | struct MonoContext<'a> {
   |        ----------- field in this struct
...
25 |     instantiations: H...
   |     ^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default


D:\Progetti\Nevhar\Kinetix\tests\linear_fail_fn.kix:
error: Use of uninitialized or moved variable 'a'
  --> D:\Progetti\Nevhar\Kinetix\tests\linear_fail_fn.kix:0
   |
 0 | fn main() {
   |     ^
  1 error(s) in Borrow Checker

error[E0000]: aborting due to previous error(s)
  Kinetix v0.0.6 (Dev)
  For more information, open an issue: https://github.com/MisterY3515/Kinetix/issues


--- Running linear_fail.kix ---

warning: field `instantiations` is never read
  --> crates\kicomp\src\monomorphize.rs:25:5
   |
21 | struct MonoContext<'a> {
   |        ----------- field in this struct
...
25 |     instantiations: H...
   |     ^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default


D:\Progetti\Nevhar\Kinetix\tests\linear_fail.kix:
error: Use of uninitialized or moved variable 'a'
  --> D:\Progetti\Nevhar\Kinetix\tests\linear_fail.kix:0
   |
 0 | let a = "resource";
   |     ^
  1 error(s) in Borrow Checker

error[E0000]: aborting due to previous error(s)
  Kinetix v0.0.6 (Dev)
  For more information, open an issue: https://github.com/MisterY3515/Kinetix/issues


--- Running linear_valid.kix ---

warning: field `instantiations` is never read
  --> crates\kicomp\src\monomorphize.rs:25:5
   |
21 | struct MonoContext<'a> {
   |        ----------- field in this struct
...
25 |     instantiations: H...
   |     ^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

20
10

--- Running phase0_core.kix ---

warning: field `instantiations` is never read
  --> crates\kicomp\src\monomorphize.rs:25:5
   |
21 | struct MonoContext<'a> {
   |        ----------- field in this struct
...
25 |     instantiations: H...
   |     ^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

Active is true
Counter: 
5
 Sin: 
0.9999999999932537
 Sqrt: 
12
 Nested OK
 Phase 0 Test Complete

--- Running phase1_ownership.kix ---

warning: field `instantiations` is never read
  --> crates\kicomp\src\monomorphize.rs:25:5
   |
21 | struct MonoContext<'a> {
   |        ----------- field in this struct
...
25 |     instantiations: H...
   |     ^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default


D:\Progetti\Nevhar\Kinetix\tests\phase1_ownership.kix:
error: Use of uninitialized or moved variable 'a'
  --> D:\Progetti\Nevhar\Kinetix\tests\phase1_ownership.kix:4
   |
 4 |     let c = a // ERROR: Use of moved variable 'a'
   |             ^
  1 error(s) in Borrow Checker

error[E0000]: aborting due to previous error(s)
  Kinetix v0.0.6 (Dev)
  For more information, open an issue: https://github.com/MisterY3515/Kinetix/issues


--- Running test_jit.kix ---

warning: field `instantiations` is never read
  --> crates\kicomp\src\monomorphize.rs:25:5
   |
21 | struct MonoContext<'a> {
   |        ----------- field in this struct
...
25 |     instantiations: H...
   |     ^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

Sin: 
0.9999999999799858
 Sqrt: 
5
 Pow: 
8

--- Running test_phase2_types.kix ---

warning: field `instantiations` is never read
  --> crates\kicomp\src\monomorphize.rs:25:5
   |
21 | struct MonoContext<'a> {
   |        ----------- field in this struct
...
25 |     instantiations: H...
   |     ^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

Phase 2 basic arithmetic: OK
Kinetix v0.0.6
Phase 2 functions: OK
Phase 2 loops: OK
Phase 2 Type System Test Complete
